--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,11 @@
 aniso8601==9.0.1
 bcrypt==3.2.0
+bleach==4.1.0
+boto3==1.21.18
+botocore==1.24.18
 cffi==1.15.0
 click==8.0.4
+contextlib2==21.6.0
 Flask==2.0.3
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
@@ -9,9 +13,18 @@ Flask-JWT-Extended==4.3.1
 Flask-RESTful==0.3.9
 itsdangerous==2.1.1
 Jinja2==3.0.3
+jmespath==0.10.0
 MarkupSafe==2.1.0
+packaging==21.3
+psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.3.0
+pyparsing==3.0.7
+python-dateutil==2.8.2
 pytz==2021.3
+s3transfer==0.5.2
+schema==0.7.5
 six==1.16.0
+urllib3==1.26.8
+webencodings==0.5.1
 Werkzeug==2.0.3
