--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,10 @@ bcrypt==3.2.0
 bleach==4.1.0
 boto3==1.21.18
 botocore==1.24.18
+cachetools==5.0.0
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.0.4
 contextlib2==21.6.0
 Flask==2.0.3
@@ -11,20 +14,34 @@ Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.3.1
 Flask-RESTful==0.3.9
+google-api-core==2.7.1
+google-api-python-client==2.40.0
+google-auth==2.6.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.55.0
+httplib2==0.20.4
+idna==3.3
 itsdangerous==2.1.1
 Jinja2==3.0.3
 jmespath==0.10.0
 MarkupSafe==2.1.0
+oauth2client==4.1.3
 packaging==21.3
+protobuf==3.19.4
 psycopg2==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 PyJWT==2.3.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
+requests==2.27.1
+rsa==4.8
 s3transfer==0.5.2
 schema==0.7.5
 six==1.16.0
+uritemplate==4.1.1
 urllib3==1.26.8
 webencodings==0.5.1
 Werkzeug==2.0.3
