--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "hoist-non-react-statics": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-hook-form": "^7.28.0",
+    "react-router-dom": "^6.2.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
