--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,7 +28,7 @@ MarkupSafe==2.1.0
 oauth2client==4.1.3
 packaging==21.3
 protobuf==3.19.4
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
