--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,7 +27,9 @@ jmespath==0.10.0
 MarkupSafe==2.1.0
 oauth2client==4.1.3
 packaging==21.3
+Pillow==9.1.0
 protobuf==3.19.4
+psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -36,6 +38,7 @@ PyJWT==2.3.0
 pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
+reportlab==3.6.9
 requests==2.27.1
 rsa==4.8
 s3transfer==0.5.2
