--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.28.0",
+    "react-parallax": "^3.3.0",
     "react-router-dom": "^6.2.2",
+    "react-scroll-parallax": "^3.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
